Editable Fields with validator - unique name - price is float Unit tests

--- a/TableViewTestDemo/TableHeaderFooterViews/GroupHeaderView.xib
+++ b/TableViewTestDemo/TableHeaderFooterViews/GroupHeaderView.xib
@@ -6,6 +6,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -13,49 +14,73 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="xia-XK-v10" customClass="GroupHeaderView" customModule="TableViewTestDemo" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="375" height="40"/>
+            <rect key="frame" x="0.0" y="0.0" width="375" height="68"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <subviews>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="NCI-1r-WYp">
-                    <rect key="frame" x="0.0" y="0.0" width="375" height="40"/>
+                    <rect key="frame" x="0.0" y="0.0" width="375" height="68"/>
+                    <subviews>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3Uv-Sv-2MO">
+                            <rect key="frame" x="13" y="8" width="313" height="28"/>
+                            <constraints>
+                                <constraint firstAttribute="height" constant="28" id="61I-Da-qBg"/>
+                            </constraints>
+                            <fontDescription key="fontDescription" type="system" weight="heavy" pointSize="17"/>
+                            <color key="textColor" red="0.99999600649999998" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                            <nil key="highlightedColor"/>
+                        </label>
+                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="contactAdd" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="VuD-Lf-9Ht">
+                            <rect key="frame" x="345" y="11" width="22" height="22"/>
+                            <accessibility key="accessibilityConfiguration" identifier="addButton"/>
+                            <constraints>
+                                <constraint firstAttribute="width" constant="22" id="CC9-0E-V81"/>
+                                <constraint firstAttribute="height" constant="22" id="OL2-2G-ac0"/>
+                            </constraints>
+                            <color key="tintColor" red="0.99999600649999998" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                            <connections>
+                                <action selector="addAction" destination="xia-XK-v10" eventType="touchUpInside" id="sUB-Bv-Ejd"/>
+                            </connections>
+                        </button>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GeA-4p-XkS">
+                            <rect key="frame" x="13" y="41" width="33" height="15"/>
+                            <fontDescription key="fontDescription" style="UICTFontTextStyleCaption1"/>
+                            <color key="textColor" red="0.99999600649999998" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                            <nil key="highlightedColor"/>
+                        </label>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Price" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="KnT-ab-VdB">
+                            <rect key="frame" x="286" y="41" width="29" height="15"/>
+                            <fontDescription key="fontDescription" style="UICTFontTextStyleCaption1"/>
+                            <color key="textColor" red="0.99999600649999998" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                            <nil key="highlightedColor"/>
+                        </label>
+                    </subviews>
                     <color key="backgroundColor" red="0.0" green="0.56470588235294117" blue="0.31764705882352939" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                </view>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3Uv-Sv-2MO">
-                    <rect key="frame" x="16" y="9" width="308" height="22"/>
-                    <fontDescription key="fontDescription" type="system" weight="heavy" pointSize="17"/>
-                    <color key="textColor" red="0.99999600649999998" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                    <nil key="highlightedColor"/>
-                </label>
-                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="contactAdd" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="VuD-Lf-9Ht">
-                    <rect key="frame" x="343" y="9" width="22" height="22"/>
-                    <accessibility key="accessibilityConfiguration" identifier="addButton"/>
                     <constraints>
-                        <constraint firstAttribute="width" constant="22" id="CC9-0E-V81"/>
+                        <constraint firstItem="3Uv-Sv-2MO" firstAttribute="top" secondItem="NCI-1r-WYp" secondAttribute="top" constant="8" id="2bR-5f-dlE"/>
+                        <constraint firstItem="3Uv-Sv-2MO" firstAttribute="leading" secondItem="NCI-1r-WYp" secondAttribute="leading" constant="13" id="45r-eH-Sad"/>
+                        <constraint firstItem="VuD-Lf-9Ht" firstAttribute="centerY" secondItem="3Uv-Sv-2MO" secondAttribute="centerY" id="CG4-4W-BLz"/>
+                        <constraint firstItem="VuD-Lf-9Ht" firstAttribute="trailing" secondItem="NCI-1r-WYp" secondAttribute="trailingMargin" id="Gmx-Xk-a0Q"/>
+                        <constraint firstAttribute="trailing" secondItem="KnT-ab-VdB" secondAttribute="trailing" constant="60" id="Hsf-fx-V16"/>
+                        <constraint firstItem="GeA-4p-XkS" firstAttribute="leading" secondItem="NCI-1r-WYp" secondAttribute="leading" constant="13" id="JH3-UG-Usf"/>
+                        <constraint firstAttribute="bottom" secondItem="GeA-4p-XkS" secondAttribute="bottom" constant="12" id="Pa5-lc-bZL"/>
+                        <constraint firstItem="VuD-Lf-9Ht" firstAttribute="leading" secondItem="3Uv-Sv-2MO" secondAttribute="trailing" constant="19" id="aZN-xQ-vc2"/>
+                        <constraint firstItem="KnT-ab-VdB" firstAttribute="centerY" secondItem="GeA-4p-XkS" secondAttribute="centerY" id="lLm-p5-X1S"/>
+                        <constraint firstAttribute="bottom" secondItem="KnT-ab-VdB" secondAttribute="bottom" constant="12" id="qjc-SU-ujP"/>
                     </constraints>
-                    <color key="tintColor" red="0.99999600649999998" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                    <connections>
-                        <action selector="addAction" destination="xia-XK-v10" eventType="touchUpInside" id="sUB-Bv-Ejd"/>
-                    </connections>
-                </button>
+                </view>
             </subviews>
             <constraints>
-                <constraint firstItem="VuD-Lf-9Ht" firstAttribute="centerY" secondItem="xia-XK-v10" secondAttribute="centerY" id="54T-zZ-hky"/>
-                <constraint firstItem="VuD-Lf-9Ht" firstAttribute="leading" secondItem="3Uv-Sv-2MO" secondAttribute="trailing" constant="19" id="5aR-8a-b1A"/>
-                <constraint firstItem="3Uv-Sv-2MO" firstAttribute="leading" secondItem="T9E-Ls-jop" secondAttribute="leading" constant="16" id="7fv-CT-kEd"/>
                 <constraint firstItem="NCI-1r-WYp" firstAttribute="leading" secondItem="T9E-Ls-jop" secondAttribute="leading" id="AFA-U1-jfz"/>
-                <constraint firstItem="T9E-Ls-jop" firstAttribute="trailing" secondItem="VuD-Lf-9Ht" secondAttribute="trailing" constant="10" id="CAg-CW-aKo"/>
                 <constraint firstItem="NCI-1r-WYp" firstAttribute="top" secondItem="T9E-Ls-jop" secondAttribute="top" id="DRf-a5-5VP"/>
                 <constraint firstItem="NCI-1r-WYp" firstAttribute="trailing" secondItem="T9E-Ls-jop" secondAttribute="trailing" id="Ug6-sY-XUN"/>
                 <constraint firstItem="NCI-1r-WYp" firstAttribute="bottom" secondItem="T9E-Ls-jop" secondAttribute="bottom" id="tYa-vJ-1iX"/>
-                <constraint firstItem="T9E-Ls-jop" firstAttribute="bottom" secondItem="3Uv-Sv-2MO" secondAttribute="bottom" constant="9" id="wgv-E5-fmW"/>
-                <constraint firstItem="3Uv-Sv-2MO" firstAttribute="top" secondItem="T9E-Ls-jop" secondAttribute="top" constant="9" id="x4C-7K-Cfv"/>
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <viewLayoutGuide key="safeArea" id="T9E-Ls-jop"/>
             <connections>
                 <outlet property="headerLabel" destination="3Uv-Sv-2MO" id="0rs-bN-ITn"/>
             </connections>
-            <point key="canvasLocation" x="-9.5" y="345"/>
+            <point key="canvasLocation" x="-9.5" y="359"/>
         </view>
     </objects>
 </document>
